Cultibox (1.1.35) precise; urgency=low
    + Ajout de textes d'aide pour les boutons 'Gestion des fichierx XML' et 'Suppréssion des annotations' du calendrier

-- Yann Genevois <yann.genevois@cultibox.fr> Thu Oct 24 11:33:49 CEST 2013


Cultibox (1.1.34) precise; urgency=low
    + Ajout de tests de vérification d'écriture sur la carte SD
    + Valeur par défaut appliquée sur un champ si un mauvais format est rentré
    + La suppréssion de tous les évènements du calendrier ainsi que l'ajout d'un calendrier d'engrais met à jour la carte SD
    + Correction du calcul du coût: correction de la modification du prix des heures creuses

-- Yann Genevois <yann.genevois@cultibox.fr> Sun Oct 20 14:58:21 CEST 2013


Cultibox (1.1.33) precise; urgency=low
    + Remise en forme de l'image de la cultibox sur le logiciel
    + Remise en forme de de l'affichage des différentes partie des logs pour que la page ne bouge plus quand on choisis un affichage par mois ou par jour
    + Ajout d'un texte annoncant la suppréssion en cours d'une base de logs dans la fênetre de suppréssion des logs
    + Modification de la gestion des mises à jour qui renvoie vers le site cultibox pour le téléchargement des fichiers
    + Utilisation du fichier index pour gérer les différents capteurs possible de la Cultibox
    + Correction de l'affichage de la hauteur des legendes des programmes
    + La gestion des erreurs pour la partie 'prise' est gérée en AJAX sans rechargement
    + Ajout d'une barre de progréssion pour la suppréssion des logs 
    + Passage en AJAX des actions du calendrier
    + Ajout de la possibilité de désactiver l'affichage des fichiers externe XML du calendrier
    + Ajout d'un datepicker pour choisir rapidement le mois du calendrier
    + Si le fichier des contrastes existe sur la carte SD on ne le remplace pas lors du formatage

-- Yann Genevois <yann.genevois@cultibox.fr> Tue Sep  3 11:43:25 CEST 2013


Cultibox (1.1.32) precise; urgency=low