@@ -92,6 +92,7 @@ onClose: function(dateText, inst){
 <?php if((isset($sd_card))&&(!empty($sd_card))) { ?>
 <script>
 sd_card = <?php echo json_encode($sd_card) ?>;
+product = <?php echo json_encode($product) ?>;
 </script>
 <?php } else { ?>
 <script>
@@ -507,7 +508,7 @@ sd_card = "";
     <table class="table_width">
     <tr>
         <td class="calendar-marge"></td>
-        <td><input type="submit" id="display_calendar" name="display_calendar" title="<?php echo __('TOOLTIP_MANAGE_XML'); ?>" value="<?php echo __('MANAGE_EXTERNAL_XML'); ?>"></td>
+        <td><input type="submit" id="display_calendar" name="display_calendar" title="<?php echo __('TOOLTIP_MANAGE_XML'); ?>" <?php if(count($list_xml)==0) { ?>class="inputDisable" disabled value="<?php echo __('DISABLED_MANAGE_EXTERNAL_XML'); ?>" <?php } else { ?> value="<?php echo __('MANAGE_EXTERNAL_XML'); ?>" <?php } ?>></td>
         <td><input type="submit" id="reset_calendar" name="reset_calendar" class="delete" title="<?php echo __('TOOLTIP_RESET_CALENDAR'); ?>" value="<?php echo __('MANAGE_RESET_CALENDAR'); ?>">
         </td>
         <td class="calendar-marge"></td>
@@ -562,7 +563,7 @@ sd_card = "";
     <td>
         <select name="product" id="product">
              <?php foreach($product as $prod) { ?>
-                <option value="<?php echo $prod; ?>"><?php echo $prod; ?></option>
+                <option value="<?php echo $prod['marque']." - ".$prod['periode']; ?>" <?php if(strcmp($prod['substrat'],$substrat[0])!=0) echo 'disabled'; ?>><?php echo $prod['marque']." - ".$prod['periode']." (".$prod['substrat'].")"; ?></option>
             <?php } ?>
         </select>
     </td>
@@ -575,7 +576,7 @@ sd_card = "";
     <td><div id="error_calendar_startdate" style="display:none" class="error_field"><img src='/cultibox/main/libs/img/arrow_error.png' alt=''><?php echo __('ERROR_FORMAT_CALENDAR_DATE'); ?></div></td>
 </tr>
 </table>
-<p class="p_center"><input type="submit" id="calendar-program" name="calendar-program" value="<?php echo __('CREATE_CALENDAR_PROGRAM'); ?>"></p>
+<p class="p_center"><input type="submit" id="calendar-program" name="calendar-program" title="<?php echo __('TOOLTIP_CREATE_CALENDAR_PROGRAM'); ?>" <?php if((count($product)==0)||(count($substrat)==0)) { ?>class="inputDisable" disabled value="<?php echo __('DISABLED_CREATE_CALENDAR_PROGRAM'); ?>" <?php } else { ?> value="<?php echo __('CREATE_CALENDAR_PROGRAM'); ?>" <?php } ?>></p>
 </form>
 
 
